--- a/08-vars-prompt.yaml
+++ b/08-vars-prompt.yaml
@@ -4,7 +4,7 @@
   vars_prompt:
   - name: COURSE
     prompt: Please enter course name
-    private: fasle # It is not confidential informtion
+    private: false # It is not confidential informtion
   - name: DURATION
     prompt: Please enter duration
     private: false
