--- a/inventory.ini
+++ b/inventory.ini
@@ -1,13 +1,13 @@
 172.31.42.165
 
 [web]
-172.31.42.165
+172.31.42.165 COURSE="DevOps with AWS" TRAINER="Nagendra" DURATION="120 HRS" ansible_user=ec2-user ansible_password=DevOps321
 
 [local]
 localhost
 
 [local:vars]
-GREET=INVENTORY
-COURSE="DevOps with AWS"
-TRAINER="Sivakumar Reddy"
-DURATION="120 HRS"
+; GREET=INVENTORY
+; COURSE="DevOps with AWS"
+; TRAINER="Sivakumar Reddy"
+; DURATION="120 HRS"
