--- a/12-vars-preference.yaml
+++ b/12-vars-preference.yaml
@@ -16,10 +16,10 @@
     ansible.builtin.debug:
       msg: "Hello from {{ GREET }}"
 
-1. Command line or args
-2. Task Level
-3. Files
-4. Prompt
-5. Play
-6. Inventory
-7. Roles
+# 1. Command line or args
+# 2. Task Level
+# 3. Files
+# 4. Prompt
+# 5. Play
+# 6. Inventory
+# 7. Roles
