--- a/20-filters.yaml
+++ b/20-filters.yaml
@@ -53,5 +53,10 @@
     ansible.builtin.debug:
       msg: "Min is: {{ numbers | min }}, Max is: {{ numbers | max}}"
 
+  - name: check ipaddress is valid or not
+    vars:
+      ip: "192.168.1.0"
+    ansible.builtin.debug:
+      msg: "{{ ip | ansible.utils.ipaddr }}"
   
 
