--- a/21-shell-command.yaml
+++ b/21-shell-command.yaml
@@ -1,15 +1,15 @@
-- name: shell vs command
+- name: shell vs Command
   hosts: local
   connection: local
   tasks:
   - name: execute ls command
-    # ansible.builtin.command: ls -ltr > /tmp/output.txt
+    #ansible.builtin.command: ls -ltr > /tmp/output.txt
     ansible.builtin.shell: ls -ltr > /tmp/output.txt
 
   - name: execute ls command in command module
-    ansible.buitlin.command: ls -ltr > /tmp/output.txt
-    # ansible.buitlin.command: ls -ltr
-    # ansible.buitlin.command: lssss -ltrsss
+    ansible.builtin.command: ls -ltr > /tmp/output.txt
+    #ansible.builtin.command: ls -ltr
+    # ansible.builtin.command: lsss -ltrssfff
     register: command_result
 
   - name: print the output
